# MyAgent

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  run.sh
config/: config.yaml
docker/: docker-compose.yaml
src/agent/: Translation.py
src/utils/: Embedding.py  Rerank.py
