[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MyAgent"
version = "0.2.0.5"
dependencies = [
    "pyyaml==6.0.1",
    "transformers==4.48.2",
    "magic-pdf[full]",
    "langchain",
    "langchain-community==0.3.1",
    "openai",
    "langchain-openai"
]

[tool.setuptools.packages.find]
where = ["src"]